# aws-c-iot

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  build-deps.sh  builder.json
.github/: pb-test.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/docker-images/ubuntu/: Dockerfile  entry_script.sh
.github/workflows/: ci.yml
clang-tidy/: run-clang-tidy.sh
cmake/: aws-c-iot-config.cmake
include/aws/iot/: exports.h
include/aws/iotdevice/: device_defender.h  exports.h  iotdevice.h  secure_tunneling.h  secure_tunneling_message_storage.h  serializer.h
include/aws/iotdevice/private/: iotdevice_internals.h  network.h  secure_tunneling_impl.h  secure_tunneling_operations.h  serializer.h
source/: device_defender.c  dummy_main.c  iotdevice.c  network.c  secure_tunneling.c  secure_tunneling_operations.c  serializer.c
source/apple/: network.c
source/linux/: network.c  serializer.c
source/windows/: network.c
tests/: CMakeLists.txt  aws_iot_devicedefender_client_test.c  aws_iot_secure_tunneling_client_test.c  aws_iot_st_de_encode_test.c  iotdevice_tests.c  metrics_tests.c  mqtt_mock_server_handler.c  mqtt_mock_server_handler.h  mqtt_mock_structs.h  secure_tunnel_tests.c  secure_tunneling_tests.c
tests/protobuf-test/: Message.pb.h  aws_iot_st_pb_test.cpp
tests/tests_protobuf/: CMakeLists.txt  Message.pb.cpp  Message.pb.h  aws_iot_st_pb_test.cpp
